[gd_scene load_steps=11 format=2]

[ext_resource path="res://system/parts/entity/part_hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://system/parts/part_entity_spawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://projectiles/projectile.gd" type="Script" id=3]
[ext_resource path="res://projectiles/fireball/fireball_projectile.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 10, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 20, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 30, 0, 10, 10 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[node name="fireball_projectile" type="Node2D"]
script = ExtResource( 3 )
speed = 150
max_lifetime = 5

[node name="texture" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 0, 1 )
position = Vector2( 0, -3 )
frames = SubResource( 2 )
frame = 3
playing = true

[node name="part_hitbox" parent="." instance=ExtResource( 1 )]
IGNORE_TAGS = [ "PLAYER" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="part_hitbox"]
shape = SubResource( 1 )

[node name="fire_spawner" parent="." instance=ExtResource( 2 )]
entity_name = "fire_area_player"
entity_group = "projectiles"

[node name="lifetime_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="collided_no_args" from="." to="fire_spawner" method="spawn_entity"]
[connection signal="hit_detected" from="part_hitbox" to="." method="_on_part_hitbox_hit_detected"]
[connection signal="hit_detected" from="part_hitbox" to="fire_spawner" method="spawn_entity"]
[connection signal="timeout" from="lifetime_timer" to="." method="_on_lifetime_timer_timeout"]
